# dans-gdal-scripts

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README.md  TODO  autogen.sh  blurb.html  config.h.in  configure.ac
m4/: boost.m4
src/: .gitignore  Makefile.am  TODO-C++  beveler-old.cc  beveler.cc  beveler.h  common.cc  common.h  datatype_conversion.cc  datatype_conversion.h  debugplot.cc  debugplot.h  default_palette.h  dem.pal  dp.cc  dp.h  excursion_pincher.cc  excursion_pincher.h  excursion_pincher2.cc  excursion_pincher2.h  gdal_contrast_stretch.cc  gdal_dem2rgb.cc  gdal_get_projected_bounds.cc  gdal_landsat_pansharp.cc  gdal_list_corners.cc  gdal_make_ndv_mask.cc  gdal_merge_simple.cc  gdal_merge_vrt.cc  gdal_raw2geotiff.cc  gdal_trace_outline.cc  gdal_wkt_to_mask.cc  geocode.cc  geocode.h  georef.cc  georef.h  geotest.cc  good-tc5.wkt  hough.cc  hough.h  mask-tracer.cc  (+22 more)
src/attic/: excursion_pincher.cc  excursion_pincher3.cc  hough.cc  hough.h
src/tests/: .gitignore  clip.wkt  good-tc2.wkt  good-tc4-rect.wkt  good_1.ppm  good_1_mask.ppm  good_1_metdata.yml  good_3.ppm  good_3_classify.wkt  good_3_classify_pal.wkt  good_3_ndvmask.pbm  good_4-rect.ppm  good_4.ppm  good_4.wkt  good_dem.pnm  good_histeq.pnm  good_maze.ppm  good_test1_1_en.wkt  good_test1_1_metdata.yml  good_test1_3.wkt  good_test1_3_classify.dbf  good_test1_3_classify.shp  good_test1_3_classify.shx  good_test1_3_classify_pal.dbf  good_test1_3_classify_pal.shp  good_test1_3_classify_pal.shx  good_test1_3_ndvmask2.pbm  good_test1_4-rect.ppm  good_test1_4.ppm  good_test1_4.wkt  good_test1_5.ppm  good_test1_double.dbf  good_test1_double.shp  good_test1_double.shx  good_test1_double.wkt  good_test1_double_clip.wkt  good_test1_features.dbf  good_test1_features.shp  good_test1_features.shx  good_test1_features.wkt  (+36 more)
